# ginn

./: meson.build  tmp.model
docs/: _sidebar.md  index.html  make-docs.sh
docs/api/: README.md  _sidebar.md
docs/api/Classes/: README.md  classginn_1_1_add_node.md  classginn_1_1_add_scalar_node.md  classginn_1_1_affine_layer_node.md  classginn_1_1_affine_node.md  classginn_1_1_alias_sampler.md  classginn_1_1_arg.md  classginn_1_1_arg_3_01bool_01_4.md  classginn_1_1_arg_3_01std_1_1vector_3_01_t_01_4_01_4.md  classginn_1_1_args.md  classginn_1_1_axis_sum_node.md  classginn_1_1_base_data_node.md  classginn_1_1_base_node.md  classginn_1_1_batched_prod_node.md  classginn_1_1_bi_lstm_layer_node.md  classginn_1_1_cat_layer_node.md  classginn_1_1_cat_node.md  classginn_1_1_chip_expr.md  classginn_1_1_chip_node.md  classginn_1_1_col_broadcast_node.md  classginn_1_1_combined_layer_node.md  classginn_1_1_constant_like_node.md  classginn_1_1_containerwise_layer_node.md  classginn_1_1_containerwise_layer_node_3_01_container_00_01_inner_out_07_inner_in_08_4.md  classginn_1_1_conv1d_node.md  classginn_1_1_conv2d_node.md  classginn_1_1_cpu_device.md  classginn_1_1_cuda_error.md  classginn_1_1_curand_generator.md  classginn_1_1_cwise_max_node.md  classginn_1_1_cwise_prod_add_node.md  classginn_1_1_cwise_prod_node.md  classginn_1_1_data_node.md  classginn_1_1_device.md  classginn_1_1_device_transfer_node.md  classginn_1_1_device_view_node.md  classginn_1_1_dim_node.md  classginn_1_1_dim_prod_node.md  classginn_1_1_dropout_layer_node.md  classginn_1_1_dropout_node.md  (+121 more)
docs/api/Namespaces/: README.md  namespace_eigen.md  namespaceginn.md  namespaceginn_1_1eigen.md  namespaceginn_1_1init.md  namespaceginn_1_1internal.md  namespaceginn_1_1literals.md  namespaceginn_1_1metric.md  namespaceginn_1_1sto.md  namespaceginn_1_1timer.md  namespaceginn_1_1timer_1_1internal.md  namespaceginn_1_1tree.md  namespaceginn_1_1update.md  namespaceginn_1_1util.md  namespacestd.md
docs/plugins/toc/: toc.css  toc.js
examples/: bench.cu.cpp  lstm-tag.cpp  meson.build  min-gpt.cu.cpp  mnist-conv.cu.cpp  mnist-layers.cu.cpp  mnist.cu.cpp  seqtag.h  sum-lstm.cu.cpp
ginn/: cudef.h  def.h  dev.h  metric.h  node.h  nonlin.h  prod.h  scalar.h  tensor.h
ginn-py/: CMakeLists.txt  dev-py.cpp  dev-py.cu  dev-py.cu.cpp  dev-py.h  ginn-py.cpp  ginn-py.cu  ginn-py.cu.cpp  meson.build  node-py.cpp  node-py.cu  node-py.h  tensor-py.cpp  tensor-py.cu  tensor-py.h  util-py.h
ginn-py/node/: affine-py.cpp  affine-py.cu  affine-py.h  common-py.cpp  common-py.cu  common-py.h
ginn/eigenop/: eigen_conv.h  helpers.h
ginn/init/: init.h
ginn/layer/: common.h  layer.h
ginn/model/: lstm.h
ginn/node/: affine.h  common.h  compare.h  conv.h  data.h  inplace.h  layernorm.h  layout.h  nlnode.h  pick.h  pool.h  prod.h  reduce.h  select.h  weight.h
ginn/update/: update.h
ginn/util/: amax.h  lookup.h  stdcontainerio.h  tensorio.h  timer.h  traits.h  util.h  wvec.h
test/: check_node.h  dev.cu.cpp  meson.build  model.cu.cpp  nodes-common.cu.cpp  nodes-compare.cu.cpp  nodes-conv.cu.cpp  nodes-dropout.cu.cpp  nodes-inplace.cu.cpp  nodes-layout.cu.cpp  nodes-pick.cu.cpp  nodes-pool.cu.cpp  nodes-prod.cu.cpp  nodes-reduce.cu.cpp  nodes.cu.cpp  nodes_layout.cu.cpp  tensor.cu.cpp  testutil.h  util.cpp
